# pyStateView

./: LICENSE  README.md  pyproject.toml  setup.py
pyStateView/: __init__.py
pyStateView/timeline/: __init__.py  phase_flow.py  state_model.py
pyStateView/utils/: __init__.py  color_map.py  time_utils.py
pyStateView/widgets/: __init__.py  event_log_view.py  state_distribution.py  state_indicator.py  state_transition_table.py
